# backend-assignment

./: .gitignore  README.md  docker-compose.yml
monitor/: Dockerfile  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
monitor/happiness/: asgi.py  settings.py  urls.py  wsgi.py
monitor/happiness/analytics/: admin.py  models.py  tasks.py
monitor/happiness/analytics/api/: serializers.py  views.py
monitor/happiness/analytics/migrations/: 0001_initial.py  0002_alter_dimensionteam_id.py  0003_alter_dimensiondate_id.py  0004_dimensiondate_year.py  0005_dimensionhappiness_factresponse_dim_happiness.py  0006_alter_dimensionhappiness_id.py  0007_rename_dimensionhappiness_dimensionhappinesslevel.py
monitor/happiness/daily/: admin.py  apps.py  helper.py  models.py  signals.py
monitor/happiness/daily/api/: serializers.py  views.py
monitor/happiness/daily/migrations/: 0001_initial.py  0002_checkin_score.py  0003_alter_checkin_responses.py  0004_remove_checkin_score_alter_checkin_responses.py  0005_remove_checkin_team_checkin_team.py  0006_rename_team_checkin_teams_alter_checkin_responses.py  0007_remove_checkin_teams_checkin_user.py  0008_alter_checkin_user.py
monitor/happiness/daily/tests/: test_models.py
monitor/happiness/team/: admin.py  models.py
monitor/happiness/team/migrations/: 0001_initial.py
